phase3/mini_l.output
Grammar

    0 $accept: Program $end

    1 Program: FunctionList
    2        | %empty

    3 FunctionList: Function FunctionList
    4             | Function

    5 Function: FUNCTION Identifier SEMICOLON FunctionParams FunctionLocals FunctionBody

    6 FunctionParams: BEGIN_PARAMS DeclarationList END_PARAMS
    7               | BEGIN_PARAMS END_PARAMS

    8 FunctionLocals: BEGIN_LOCALS DeclarationList END_LOCALS
    9               | BEGIN_LOCALS END_LOCALS

   10 FunctionBody: BEGIN_BODY StatementList END_BODY
   11             | BEGIN_BODY END_BODY

   12 DeclarationList: DeclarationList Declaration SEMICOLON
   13                | Declaration SEMICOLON

   14 Declaration: IdentifierList COLON INTEGER
   15            | IdentifierList COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

   16 IdentifierList: Identifier
   17               | Identifier COMMA IdentifierList

   18 Identifier: IDENT

   19 Statement: Var ASSIGN Expression
   20          | IF BoolExpr THEN StatementList ENDIF
   21          | IF BoolExpr THEN StatementList ELSE StatementList ENDIF
   22          | WHILE BoolExpr BEGINLOOP StatementList ENDLOOP
   23          | DO BEGINLOOP StatementList ENDLOOP WHILE BoolExpr
   24          | FOR Var ASSIGN NUMBER SEMICOLON BoolExpr SEMICOLON Var ASSIGN Expression BEGINLOOP StatementList ENDLOOP
   25          | READ VarList
   26          | WRITE VarList
   27          | CONTINUE
   28          | RETURN Expression

   29 StatementList: Statement SEMICOLON
   30              | StatementList Statement SEMICOLON

   31 BoolExpr: BoolExpr OR RelationAndExpr
   32         | RelationAndExpr

   33 RelationAndExpr: RelationAndExpr AND RelationExpr
   34                | RelationExpr

   35 RelationExpr: Relations
   36             | NOT Relations

   37 Relations: Expression Comp Expression
   38          | TRUE
   39          | FALSE
   40          | L_PAREN BoolExpr R_PAREN

   41 Comp: EQ
   42     | NEQ
   43     | LT
   44     | GT
   45     | LTE
   46     | GTE

   47 Expression: Expression ADD MultiplicativeExpr
   48           | Expression SUB MultiplicativeExpr
   49           | MultiplicativeExpr

   50 ExpressionList: ExpressionList COMMA Expression
   51               | Expression
   52               | %empty

   53 MultiplicativeExpr: MultiplicativeExpr MULT Term
   54                   | MultiplicativeExpr DIV Term
   55                   | MultiplicativeExpr MOD Term
   56                   | Term

   57 Term: TermInner
   58     | SUB TermInner
   59     | Identifier L_PAREN ExpressionList R_PAREN

   60 TermInner: Var
   61          | NUMBER
   62          | L_PAREN Expression R_PAREN

   63 Var: Identifier
   64    | Identifier L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

   65 VarList: Var
   66        | Var COMMA VarList


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNCTION (258) 5
BEGIN_PARAMS (259) 6 7
END_PARAMS (260) 6 7
BEGIN_LOCALS (261) 8 9
END_LOCALS (262) 8 9
BEGIN_BODY (263) 10 11
END_BODY (264) 10 11
INTEGER (265) 14 15
ARRAY (266) 15
OF (267) 15
IF (268) 20 21
THEN (269) 20 21
ENDIF (270) 20 21
ELSE (271) 21
WHILE (272) 22 23
DO (273) 23
FOR (274) 24
BEGINLOOP (275) 22 23 24
ENDLOOP (276) 22 23 24
CONTINUE (277) 27
READ (278) 25
WRITE (279) 26
AND (280) 33
OR (281) 31
NOT (282) 36
TRUE (283) 38
FALSE (284) 39
RETURN (285) 28
SUB (286) 48 58
ADD (287) 47
MULT (288) 53
DIV (289) 54
MOD (290) 55
EQ (291) 41
NEQ (292) 42
LT (293) 43
GT (294) 44
LTE (295) 45
GTE (296) 46
SEMICOLON (297) 5 12 13 24 29 30
COLON (298) 14 15
COMMA (299) 17 50 66
L_PAREN (300) 40 59 62
R_PAREN (301) 40 59 62
L_SQUARE_BRACKET (302) 15 64
R_SQUARE_BRACKET (303) 15 64
ASSIGN (304) 19 24
IDENT (305) 18
NUMBER (306) 15 24 61


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1 2, on right: 0
FunctionList (54)
    on left: 3 4, on right: 1 3
Function (55)
    on left: 5, on right: 3 4
FunctionParams (56)
    on left: 6 7, on right: 5
FunctionLocals (57)
    on left: 8 9, on right: 5
FunctionBody (58)
    on left: 10 11, on right: 5
DeclarationList (59)
    on left: 12 13, on right: 6 8 12
Declaration (60)
    on left: 14 15, on right: 12 13
IdentifierList (61)
    on left: 16 17, on right: 14 15 17
Identifier (62)
    on left: 18, on right: 5 16 17 59 63 64
Statement (63)
    on left: 19 20 21 22 23 24 25 26 27 28, on right: 29 30
StatementList (64)
    on left: 29 30, on right: 10 20 21 22 23 24 30
BoolExpr (65)
    on left: 31 32, on right: 20 21 22 23 24 31 40
RelationAndExpr (66)
    on left: 33 34, on right: 31 32 33
RelationExpr (67)
    on left: 35 36, on right: 33 34
Relations (68)
    on left: 37 38 39 40, on right: 35 36
Comp (69)
    on left: 41 42 43 44 45 46, on right: 37
Expression (70)
    on left: 47 48 49, on right: 19 24 28 37 47 48 50 51 62 64
ExpressionList (71)
    on left: 50 51 52, on right: 50 59
MultiplicativeExpr (72)
    on left: 53 54 55 56, on right: 47 48 49 53 54 55
Term (73)
    on left: 57 58 59, on right: 53 54 55 56
TermInner (74)
    on left: 60 61 62, on right: 57 58
Var (75)
    on left: 63 64, on right: 19 24 60 65 66
VarList (76)
    on left: 65 66, on right: 25 26 66


State 0

    0 $accept: . Program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 2 (Program)

    Program       go to state 2
    FunctionList  go to state 3
    Function      go to state 4


State 1

    5 Function: FUNCTION . Identifier SEMICOLON FunctionParams FunctionLocals FunctionBody

    IDENT  shift, and go to state 5

    Identifier  go to state 6


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 7


State 3

    1 Program: FunctionList .

    $default  reduce using rule 1 (Program)


State 4

    3 FunctionList: Function . FunctionList
    4             | Function .

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 4 (FunctionList)

    FunctionList  go to state 8
    Function      go to state 4


State 5

   18 Identifier: IDENT .

    $default  reduce using rule 18 (Identifier)


State 6

    5 Function: FUNCTION Identifier . SEMICOLON FunctionParams FunctionLocals FunctionBody

    SEMICOLON  shift, and go to state 9


State 7

    0 $accept: Program $end .

    $default  accept


State 8

    3 FunctionList: Function FunctionList .

    $default  reduce using rule 3 (FunctionList)


State 9

    5 Function: FUNCTION Identifier SEMICOLON . FunctionParams FunctionLocals FunctionBody

    BEGIN_PARAMS  shift, and go to state 10

    FunctionParams  go to state 11


State 10

    6 FunctionParams: BEGIN_PARAMS . DeclarationList END_PARAMS
    7               | BEGIN_PARAMS . END_PARAMS

    END_PARAMS  shift, and go to state 12
    IDENT       shift, and go to state 5

    DeclarationList  go to state 13
    Declaration      go to state 14
    IdentifierList   go to state 15
    Identifier       go to state 16


State 11

    5 Function: FUNCTION Identifier SEMICOLON FunctionParams . FunctionLocals FunctionBody

    BEGIN_LOCALS  shift, and go to state 17

    FunctionLocals  go to state 18


State 12

    7 FunctionParams: BEGIN_PARAMS END_PARAMS .

    $default  reduce using rule 7 (FunctionParams)


State 13

    6 FunctionParams: BEGIN_PARAMS DeclarationList . END_PARAMS
   12 DeclarationList: DeclarationList . Declaration SEMICOLON

    END_PARAMS  shift, and go to state 19
    IDENT       shift, and go to state 5

    Declaration     go to state 20
    IdentifierList  go to state 15
    Identifier      go to state 16


State 14

   13 DeclarationList: Declaration . SEMICOLON

    SEMICOLON  shift, and go to state 21


State 15

   14 Declaration: IdentifierList . COLON INTEGER
   15            | IdentifierList . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    COLON  shift, and go to state 22


State 16

   16 IdentifierList: Identifier .
   17               | Identifier . COMMA IdentifierList

    COMMA  shift, and go to state 23

    $default  reduce using rule 16 (IdentifierList)


State 17

    8 FunctionLocals: BEGIN_LOCALS . DeclarationList END_LOCALS
    9               | BEGIN_LOCALS . END_LOCALS

    END_LOCALS  shift, and go to state 24
    IDENT       shift, and go to state 5

    DeclarationList  go to state 25
    Declaration      go to state 14
    IdentifierList   go to state 15
    Identifier       go to state 16


State 18

    5 Function: FUNCTION Identifier SEMICOLON FunctionParams FunctionLocals . FunctionBody

    BEGIN_BODY  shift, and go to state 26

    FunctionBody  go to state 27


State 19

    6 FunctionParams: BEGIN_PARAMS DeclarationList END_PARAMS .

    $default  reduce using rule 6 (FunctionParams)


State 20

   12 DeclarationList: DeclarationList Declaration . SEMICOLON

    SEMICOLON  shift, and go to state 28


State 21

   13 DeclarationList: Declaration SEMICOLON .

    $default  reduce using rule 13 (DeclarationList)


State 22

   14 Declaration: IdentifierList COLON . INTEGER
   15            | IdentifierList COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    INTEGER  shift, and go to state 29
    ARRAY    shift, and go to state 30


State 23

   17 IdentifierList: Identifier COMMA . IdentifierList

    IDENT  shift, and go to state 5

    IdentifierList  go to state 31
    Identifier      go to state 16


State 24

    9 FunctionLocals: BEGIN_LOCALS END_LOCALS .

    $default  reduce using rule 9 (FunctionLocals)


State 25

    8 FunctionLocals: BEGIN_LOCALS DeclarationList . END_LOCALS
   12 DeclarationList: DeclarationList . Declaration SEMICOLON

    END_LOCALS  shift, and go to state 32
    IDENT       shift, and go to state 5

    Declaration     go to state 20
    IdentifierList  go to state 15
    Identifier      go to state 16


State 26

   10 FunctionBody: BEGIN_BODY . StatementList END_BODY
   11             | BEGIN_BODY . END_BODY

    END_BODY  shift, and go to state 33
    IF        shift, and go to state 34
    WHILE     shift, and go to state 35
    DO        shift, and go to state 36
    FOR       shift, and go to state 37
    CONTINUE  shift, and go to state 38
    READ      shift, and go to state 39
    WRITE     shift, and go to state 40
    RETURN    shift, and go to state 41
    IDENT     shift, and go to state 5

    Identifier     go to state 42
    Statement      go to state 43
    StatementList  go to state 44
    Var            go to state 45


State 27

    5 Function: FUNCTION Identifier SEMICOLON FunctionParams FunctionLocals FunctionBody .

    $default  reduce using rule 5 (Function)


State 28

   12 DeclarationList: DeclarationList Declaration SEMICOLON .

    $default  reduce using rule 12 (DeclarationList)


State 29

   14 Declaration: IdentifierList COLON INTEGER .

    $default  reduce using rule 14 (Declaration)


State 30

   15 Declaration: IdentifierList COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 46


State 31

   17 IdentifierList: Identifier COMMA IdentifierList .

    $default  reduce using rule 17 (IdentifierList)


State 32

    8 FunctionLocals: BEGIN_LOCALS DeclarationList END_LOCALS .

    $default  reduce using rule 8 (FunctionLocals)


State 33

   11 FunctionBody: BEGIN_BODY END_BODY .

    $default  reduce using rule 11 (FunctionBody)


State 34

   20 Statement: IF . BoolExpr THEN StatementList ENDIF
   21          | IF . BoolExpr THEN StatementList ELSE StatementList ENDIF

    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier          go to state 53
    BoolExpr            go to state 54
    RelationAndExpr     go to state 55
    RelationExpr        go to state 56
    Relations           go to state 57
    Expression          go to state 58
    MultiplicativeExpr  go to state 59
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 35

   22 Statement: WHILE . BoolExpr BEGINLOOP StatementList ENDLOOP

    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier          go to state 53
    BoolExpr            go to state 63
    RelationAndExpr     go to state 55
    RelationExpr        go to state 56
    Relations           go to state 57
    Expression          go to state 58
    MultiplicativeExpr  go to state 59
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 36

   23 Statement: DO . BEGINLOOP StatementList ENDLOOP WHILE BoolExpr

    BEGINLOOP  shift, and go to state 64


State 37

   24 Statement: FOR . Var ASSIGN NUMBER SEMICOLON BoolExpr SEMICOLON Var ASSIGN Expression BEGINLOOP StatementList ENDLOOP

    IDENT  shift, and go to state 5

    Identifier  go to state 42
    Var         go to state 65


State 38

   27 Statement: CONTINUE .

    $default  reduce using rule 27 (Statement)


State 39

   25 Statement: READ . VarList

    IDENT  shift, and go to state 5

    Identifier  go to state 42
    Var         go to state 66
    VarList     go to state 67


State 40

   26 Statement: WRITE . VarList

    IDENT  shift, and go to state 5

    Identifier  go to state 42
    Var         go to state 66
    VarList     go to state 68


State 41

   28 Statement: RETURN . Expression

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 69
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier          go to state 53
    Expression          go to state 70
    MultiplicativeExpr  go to state 59
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 42

   63 Var: Identifier .
   64    | Identifier . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 71

    $default  reduce using rule 63 (Var)


State 43

   29 StatementList: Statement . SEMICOLON

    SEMICOLON  shift, and go to state 72


State 44

   10 FunctionBody: BEGIN_BODY StatementList . END_BODY
   30 StatementList: StatementList . Statement SEMICOLON

    END_BODY  shift, and go to state 73
    IF        shift, and go to state 34
    WHILE     shift, and go to state 35
    DO        shift, and go to state 36
    FOR       shift, and go to state 37
    CONTINUE  shift, and go to state 38
    READ      shift, and go to state 39
    WRITE     shift, and go to state 40
    RETURN    shift, and go to state 41
    IDENT     shift, and go to state 5

    Identifier  go to state 42
    Statement   go to state 74
    Var         go to state 45


State 45

   19 Statement: Var . ASSIGN Expression

    ASSIGN  shift, and go to state 75


State 46

   15 Declaration: IdentifierList COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 76


State 47

   36 RelationExpr: NOT . Relations

    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier          go to state 53
    Relations           go to state 77
    Expression          go to state 58
    MultiplicativeExpr  go to state 59
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 48

   38 Relations: TRUE .

    $default  reduce using rule 38 (Relations)


State 49

   39 Relations: FALSE .

    $default  reduce using rule 39 (Relations)


State 50

   58 Term: SUB . TermInner

    L_PAREN  shift, and go to state 69
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier  go to state 42
    TermInner   go to state 78
    Var         go to state 62


State 51

   40 Relations: L_PAREN . BoolExpr R_PAREN
   62 TermInner: L_PAREN . Expression R_PAREN

    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier          go to state 53
    BoolExpr            go to state 79
    RelationAndExpr     go to state 55
    RelationExpr        go to state 56
    Relations           go to state 57
    Expression          go to state 80
    MultiplicativeExpr  go to state 59
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 52

   61 TermInner: NUMBER .

    $default  reduce using rule 61 (TermInner)


State 53

   59 Term: Identifier . L_PAREN ExpressionList R_PAREN
   63 Var: Identifier .
   64    | Identifier . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_PAREN           shift, and go to state 81
    L_SQUARE_BRACKET  shift, and go to state 71

    $default  reduce using rule 63 (Var)


State 54

   20 Statement: IF BoolExpr . THEN StatementList ENDIF
   21          | IF BoolExpr . THEN StatementList ELSE StatementList ENDIF
   31 BoolExpr: BoolExpr . OR RelationAndExpr

    THEN  shift, and go to state 82
    OR    shift, and go to state 83


State 55

   32 BoolExpr: RelationAndExpr .
   33 RelationAndExpr: RelationAndExpr . AND RelationExpr

    AND  shift, and go to state 84

    $default  reduce using rule 32 (BoolExpr)


State 56

   34 RelationAndExpr: RelationExpr .

    $default  reduce using rule 34 (RelationAndExpr)


State 57

   35 RelationExpr: Relations .

    $default  reduce using rule 35 (RelationExpr)


State 58

   37 Relations: Expression . Comp Expression
   47 Expression: Expression . ADD MultiplicativeExpr
   48           | Expression . SUB MultiplicativeExpr

    SUB  shift, and go to state 85
    ADD  shift, and go to state 86
    EQ   shift, and go to state 87
    NEQ  shift, and go to state 88
    LT   shift, and go to state 89
    GT   shift, and go to state 90
    LTE  shift, and go to state 91
    GTE  shift, and go to state 92

    Comp  go to state 93


State 59

   49 Expression: MultiplicativeExpr .
   53 MultiplicativeExpr: MultiplicativeExpr . MULT Term
   54                   | MultiplicativeExpr . DIV Term
   55                   | MultiplicativeExpr . MOD Term

    MULT  shift, and go to state 94
    DIV   shift, and go to state 95
    MOD   shift, and go to state 96

    $default  reduce using rule 49 (Expression)


State 60

   56 MultiplicativeExpr: Term .

    $default  reduce using rule 56 (MultiplicativeExpr)


State 61

   57 Term: TermInner .

    $default  reduce using rule 57 (Term)


State 62

   60 TermInner: Var .

    $default  reduce using rule 60 (TermInner)


State 63

   22 Statement: WHILE BoolExpr . BEGINLOOP StatementList ENDLOOP
   31 BoolExpr: BoolExpr . OR RelationAndExpr

    BEGINLOOP  shift, and go to state 97
    OR         shift, and go to state 83


State 64

   23 Statement: DO BEGINLOOP . StatementList ENDLOOP WHILE BoolExpr

    IF        shift, and go to state 34
    WHILE     shift, and go to state 35
    DO        shift, and go to state 36
    FOR       shift, and go to state 37
    CONTINUE  shift, and go to state 38
    READ      shift, and go to state 39
    WRITE     shift, and go to state 40
    RETURN    shift, and go to state 41
    IDENT     shift, and go to state 5

    Identifier     go to state 42
    Statement      go to state 43
    StatementList  go to state 98
    Var            go to state 45


State 65

   24 Statement: FOR Var . ASSIGN NUMBER SEMICOLON BoolExpr SEMICOLON Var ASSIGN Expression BEGINLOOP StatementList ENDLOOP

    ASSIGN  shift, and go to state 99


State 66

   65 VarList: Var .
   66        | Var . COMMA VarList

    COMMA  shift, and go to state 100

    $default  reduce using rule 65 (VarList)


State 67

   25 Statement: READ VarList .

    $default  reduce using rule 25 (Statement)


State 68

   26 Statement: WRITE VarList .

    $default  reduce using rule 26 (Statement)


State 69

   62 TermInner: L_PAREN . Expression R_PAREN

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 69
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier          go to state 53
    Expression          go to state 101
    MultiplicativeExpr  go to state 59
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 70

   28 Statement: RETURN Expression .
   47 Expression: Expression . ADD MultiplicativeExpr
   48           | Expression . SUB MultiplicativeExpr

    SUB  shift, and go to state 85
    ADD  shift, and go to state 86

    $default  reduce using rule 28 (Statement)


State 71

   64 Var: Identifier L_SQUARE_BRACKET . Expression R_SQUARE_BRACKET

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 69
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier          go to state 53
    Expression          go to state 102
    MultiplicativeExpr  go to state 59
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 72

   29 StatementList: Statement SEMICOLON .

    $default  reduce using rule 29 (StatementList)


State 73

   10 FunctionBody: BEGIN_BODY StatementList END_BODY .

    $default  reduce using rule 10 (FunctionBody)


State 74

   30 StatementList: StatementList Statement . SEMICOLON

    SEMICOLON  shift, and go to state 103


State 75

   19 Statement: Var ASSIGN . Expression

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 69
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier          go to state 53
    Expression          go to state 104
    MultiplicativeExpr  go to state 59
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 76

   15 Declaration: IdentifierList COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 105


State 77

   36 RelationExpr: NOT Relations .

    $default  reduce using rule 36 (RelationExpr)


State 78

   58 Term: SUB TermInner .

    $default  reduce using rule 58 (Term)


State 79

   31 BoolExpr: BoolExpr . OR RelationAndExpr
   40 Relations: L_PAREN BoolExpr . R_PAREN

    OR       shift, and go to state 83
    R_PAREN  shift, and go to state 106


State 80

   37 Relations: Expression . Comp Expression
   47 Expression: Expression . ADD MultiplicativeExpr
   48           | Expression . SUB MultiplicativeExpr
   62 TermInner: L_PAREN Expression . R_PAREN

    SUB      shift, and go to state 85
    ADD      shift, and go to state 86
    EQ       shift, and go to state 87
    NEQ      shift, and go to state 88
    LT       shift, and go to state 89
    GT       shift, and go to state 90
    LTE      shift, and go to state 91
    GTE      shift, and go to state 92
    R_PAREN  shift, and go to state 107

    Comp  go to state 93


State 81

   59 Term: Identifier L_PAREN . ExpressionList R_PAREN

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 69
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    $default  reduce using rule 52 (ExpressionList)

    Identifier          go to state 53
    Expression          go to state 108
    ExpressionList      go to state 109
    MultiplicativeExpr  go to state 59
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 82

   20 Statement: IF BoolExpr THEN . StatementList ENDIF
   21          | IF BoolExpr THEN . StatementList ELSE StatementList ENDIF

    IF        shift, and go to state 34
    WHILE     shift, and go to state 35
    DO        shift, and go to state 36
    FOR       shift, and go to state 37
    CONTINUE  shift, and go to state 38
    READ      shift, and go to state 39
    WRITE     shift, and go to state 40
    RETURN    shift, and go to state 41
    IDENT     shift, and go to state 5

    Identifier     go to state 42
    Statement      go to state 43
    StatementList  go to state 110
    Var            go to state 45


State 83

   31 BoolExpr: BoolExpr OR . RelationAndExpr

    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier          go to state 53
    RelationAndExpr     go to state 111
    RelationExpr        go to state 56
    Relations           go to state 57
    Expression          go to state 58
    MultiplicativeExpr  go to state 59
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 84

   33 RelationAndExpr: RelationAndExpr AND . RelationExpr

    NOT      shift, and go to state 47
    TRUE     shift, and go to state 48
    FALSE    shift, and go to state 49
    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 51
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier          go to state 53
    RelationExpr        go to state 112
    Relations           go to state 57
    Expression          go to state 58
    MultiplicativeExpr  go to state 59
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 85

   48 Expression: Expression SUB . MultiplicativeExpr

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 69
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier          go to state 53
    MultiplicativeExpr  go to state 113
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 86

   47 Expression: Expression ADD . MultiplicativeExpr

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 69
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52

    Identifier          go to state 53
    MultiplicativeExpr  go to state 114
    Term                go to state 60
    TermInner           go to state 61
    Var                 go to state 62


State 87

   41 Comp: EQ .

    $default  reduce using rule 41 (Comp)


State 88

   42 Comp: NEQ .

    $default  reduce using rule 42 (Comp)


State 89

   43 Comp: LT .

    $default  reduce using rule 43 (Comp)


State 90

   44 Comp: GT .

    $default  reduce using rule 44 (Comp)


State 91

   45 Comp: LTE .

    $default  reduce using rule 45 (Comp)


State 92

   46 Comp: GTE .

    $default  reduce using rule 46 (Comp)


State 93

   37 Relations: Expression Comp . Expression

    SUB      shift, and go to state 50
    L_PAREN  shift, and go to state 69
    IDENT    shift, and go to state 5
    NUMBER   shift, and go to state 52
